native/llama_dart_bridge/include/llama_dart.h

typedef enum llama_dart_result {
  LLAMA_DART_SUCCESS = 0,
  LLAMA_DART_ERROR_INVALID_ARGUMENT = 1,
  LLAMA_DART_ERROR_UNSUPPORTED = 2,
  LLAMA_DART_ERROR_INTERNAL = 3,
  LLAMA_DART_ERROR_MODEL_LOAD = 4,
  LLAMA_DART_ERROR_BUFFER_TOO_SMALL = 5,
  LLAMA_DART_ERROR_CONTEXT_CREATE = 6,
  LLAMA_DART_ERROR_GENERATION = 7,
  LLAMA_DART_ERROR_EMBEDDING = 8,
  LLAMA_DART_ERROR_CANCELLED = 9,
  LLAMA_DART_ERROR_RERANKING = 10,
  LLAMA_DART_ERROR_LORA = 11,
} llama_dart_result;
typedef enum llama_dart_capability_flags {
  LLAMA_DART_CAP_MODEL_LOADING = 1ull << 7,
  LLAMA_DART_CAP_TOKENIZATION = 1ull << 8,
  LLAMA_DART_CAP_STRUCTURED_OUTPUT = 1ull << 9,
  LLAMA_DART_CAP_TEXT_GENERATION = 1ull << 0,
  LLAMA_DART_CAP_EMBEDDINGS = 1ull << 1,
  LLAMA_DART_CAP_RERANKING = 1ull << 2,
  LLAMA_DART_CAP_MULTIMODAL = 1ull << 3,
  LLAMA_DART_CAP_LORA = 1ull << 4,
  LLAMA_DART_CAP_SPECULATIVE_DECODING = 1ull << 5,
  LLAMA_DART_CAP_MTP = 1ull << 6,
  LLAMA_DART_CAP_METAL = 1ull << 10,
  LLAMA_DART_CAP_VULKAN = 1ull << 11,
  LLAMA_DART_CAP_TOOL_CALLING = 1ull << 12,
  LLAMA_DART_CAP_LOGGING = 1ull << 13,
  LLAMA_DART_CAP_PREFILL = 1ull << 14,
} llama_dart_capability_flags;
typedef struct llama_dart_capabilities {
  uint32_t struct_size;
  uint32_t abi_version;
  uint64_t flags;
} llama_dart_capabilities;
typedef struct llama_dart_model llama_dart_model;
typedef struct llama_dart_context llama_dart_context;
typedef struct llama_dart_generation llama_dart_generation;
typedef struct llama_dart_lora_adapter llama_dart_lora_adapter;
typedef enum llama_dart_gpu_backend {
  LLAMA_DART_GPU_BACKEND_AUTO = 0,
  LLAMA_DART_GPU_BACKEND_CPU = 1,
  LLAMA_DART_GPU_BACKEND_METAL = 2,
  LLAMA_DART_GPU_BACKEND_VULKAN = 3,
} llama_dart_gpu_backend;
typedef enum llama_dart_log_level {
  LLAMA_DART_LOG_DISABLED = 0,
  LLAMA_DART_LOG_DEBUG = 1,
  LLAMA_DART_LOG_INFO = 2,
  LLAMA_DART_LOG_WARNING = 3,
  LLAMA_DART_LOG_ERROR = 4,
} llama_dart_log_level;
typedef enum llama_dart_media_type {
  LLAMA_DART_MEDIA_IMAGE = 1,
  LLAMA_DART_MEDIA_AUDIO = 2,
} llama_dart_media_type;
typedef enum llama_dart_speculative_type {
  LLAMA_DART_SPECULATIVE_NONE = 0,
  LLAMA_DART_SPECULATIVE_NGRAM_SIMPLE = 1,
  LLAMA_DART_SPECULATIVE_DRAFT_MODEL = 2,
  LLAMA_DART_SPECULATIVE_EAGLE3 = 3,
  LLAMA_DART_SPECULATIVE_MTP = 4,
  LLAMA_DART_SPECULATIVE_NGRAM_MAP_K = 5,
  LLAMA_DART_SPECULATIVE_NGRAM_MAP_K4V = 6,
  LLAMA_DART_SPECULATIVE_DFLASH = 7,
  LLAMA_DART_SPECULATIVE_NGRAM_MOD = 8,
  LLAMA_DART_SPECULATIVE_NGRAM_CACHE = 9,
} llama_dart_speculative_type;
typedef enum llama_dart_add_special_mode {
  LLAMA_DART_ADD_SPECIAL_NEVER = 0,
  LLAMA_DART_ADD_SPECIAL_ALWAYS = 1,
  LLAMA_DART_ADD_SPECIAL_IF_CONTEXT_EMPTY = 2,
} llama_dart_add_special_mode;
typedef enum llama_dart_stop_reason {
  LLAMA_DART_STOP_REASON_UNKNOWN = 0,
  LLAMA_DART_STOP_REASON_END_OF_GENERATION = 1,
  LLAMA_DART_STOP_REASON_STOP_SEQUENCE = 2,
  LLAMA_DART_STOP_REASON_STOP_TOKEN = 3,
  LLAMA_DART_STOP_REASON_MAX_TOKENS = 4,
} llama_dart_stop_reason;
typedef enum llama_dart_kv_cache_type {
  LLAMA_DART_KV_CACHE_DEFAULT = 0,
  LLAMA_DART_KV_CACHE_F32 = 1,
  LLAMA_DART_KV_CACHE_F16 = 2,
  LLAMA_DART_KV_CACHE_BF16 = 3,
  LLAMA_DART_KV_CACHE_Q8_0 = 4,
  LLAMA_DART_KV_CACHE_Q4_0 = 5,
  LLAMA_DART_KV_CACHE_Q4_1 = 6,
  LLAMA_DART_KV_CACHE_IQ4_NL = 7,
  LLAMA_DART_KV_CACHE_Q5_0 = 8,
  LLAMA_DART_KV_CACHE_Q5_1 = 9,
} llama_dart_kv_cache_type;
typedef enum llama_dart_flash_attention_mode {
  LLAMA_DART_FLASH_ATTENTION_AUTO = 0,
  LLAMA_DART_FLASH_ATTENTION_DISABLED = 1,
  LLAMA_DART_FLASH_ATTENTION_ENABLED = 2,
} llama_dart_flash_attention_mode;
typedef struct llama_dart_media_input {
  uint32_t struct_size;
  uint32_t type;
  const uint8_t *path_data;
  size_t path_size;
  const uint8_t *content_data;
  size_t content_size;
} llama_dart_media_input;
typedef struct llama_dart_model_load_config {
  uint32_t struct_size;
  const uint8_t *model_path_data;
  size_t model_path_size;
  int32_t n_gpu_layers;
  uint8_t vocab_only;
  uint8_t use_mmap;
  uint8_t use_mlock;
  uint8_t check_tensors;
  uint32_t gpu_backend;
  const uint8_t *chat_template_data;
  size_t chat_template_size;
  uint8_t load_mtp;
} llama_dart_model_load_config;
typedef struct llama_dart_model_info {
  uint32_t struct_size;
  int32_t vocab_type;
  int32_t n_vocab;
  int32_t n_ctx_train;
  int32_t n_embd;
  int32_t n_embd_inp;
  int32_t n_embd_out;
  int32_t n_layer;
  int32_t n_layer_nextn;
  int32_t n_head;
  int32_t n_head_kv;
  int32_t ftype;
  uint64_t size_bytes;
  uint64_t n_params;
  int32_t token_bos;
  int32_t token_eos;
  int32_t token_eot;
  int32_t token_sep;
  int32_t token_nl;
  int32_t token_pad;
  int32_t token_mask;
  uint8_t has_encoder;
  uint8_t has_decoder;
  uint8_t is_recurrent;
  uint8_t is_hybrid;
  uint8_t is_diffusion;
  uint8_t add_bos;
  uint8_t add_eos;
  uint8_t add_sep;
} llama_dart_model_info;
typedef struct llama_dart_context_config {
  uint32_t struct_size;
  uint32_t context_size;
  uint32_t batch_size;
  uint32_t ubatch_size;
  int32_t threads;
  int32_t batch_threads;
  uint8_t embeddings;
  int32_t pooling_type;
  int32_t attention_type;
  uint32_t speculative_ngram_n;
  uint32_t speculative_ngram_m;
  const uint8_t *mmproj_path_data;
  size_t mmproj_path_size;
  uint8_t mmproj_use_gpu;
  uint32_t speculative_type;
  const uint8_t *speculative_model_path_data;
  size_t speculative_model_path_size;
  uint32_t speculative_draft_max;
  uint32_t kv_cache_key_type;
  uint32_t kv_cache_value_type;
  uint32_t flash_attention;
  uint8_t kv_cache_offload;
  uint8_t swa_full;
  uint8_t kv_unified;
  uint32_t speculative_ngram_min_draft;
} llama_dart_context_config;
typedef struct llama_dart_context_info {
  uint32_t struct_size;
  uint32_t context_size;
  uint32_t sequence_context_size;
  uint32_t batch_size;
  uint32_t ubatch_size;
  uint32_t max_sequences;
  uint8_t supports_vision;
  uint8_t supports_audio;
  uint32_t gpu_backend;
  uint8_t supports_context_shift;
  uint32_t used_tokens;
  uint32_t kv_cache_key_type;
  uint32_t kv_cache_value_type;
  uint32_t flash_attention;
  uint8_t kv_cache_offload;
  uint8_t swa_full;
  uint8_t kv_unified;
} llama_dart_context_info;