lib/src/ffi/generated_bindings.dart


  static llama_dart_result fromValue(int value) => switch (value) {
    0 => LLAMA_DART_SUCCESS,
    1 => LLAMA_DART_ERROR_INVALID_ARGUMENT,
    2 => LLAMA_DART_ERROR_UNSUPPORTED,
    3 => LLAMA_DART_ERROR_INTERNAL,
    4 => LLAMA_DART_ERROR_MODEL_LOAD,
    5 => LLAMA_DART_ERROR_BUFFER_TOO_SMALL,
    6 => LLAMA_DART_ERROR_CONTEXT_CREATE,
    7 => LLAMA_DART_ERROR_GENERATION,
    8 => LLAMA_DART_ERROR_EMBEDDING,
    9 => LLAMA_DART_ERROR_CANCELLED,
    10 => LLAMA_DART_ERROR_RERANKING,
    11 => LLAMA_DART_ERROR_LORA,
    _ => throw ArgumentError('Unknown value for llama_dart_result: $value'),
  };
}

enum llama_dart_capability_flags {
  LLAMA_DART_CAP_MODEL_LOADING(128),
  LLAMA_DART_CAP_TOKENIZATION(256),
  LLAMA_DART_CAP_STRUCTURED_OUTPUT(512),
  LLAMA_DART_CAP_TEXT_GENERATION(1),
  LLAMA_DART_CAP_EMBEDDINGS(2),
  LLAMA_DART_CAP_RERANKING(4),
  LLAMA_DART_CAP_MULTIMODAL(8),
  LLAMA_DART_CAP_LORA(16),
  LLAMA_DART_CAP_SPECULATIVE_DECODING(32),
  LLAMA_DART_CAP_MTP(64),
  LLAMA_DART_CAP_METAL(1024),
  LLAMA_DART_CAP_VULKAN(2048),
  LLAMA_DART_CAP_TOOL_CALLING(4096),
  LLAMA_DART_CAP_LOGGING(8192),
  LLAMA_DART_CAP_PREFILL(16384);

  final int value;
  const llama_dart_capability_flags(this.value);

  static llama_dart_capability_flags fromValue(int value) => switch (value) {
    128 => LLAMA_DART_CAP_MODEL_LOADING,
    256 => LLAMA_DART_CAP_TOKENIZATION,
    512 => LLAMA_DART_CAP_STRUCTURED_OUTPUT,
    1 => LLAMA_DART_CAP_TEXT_GENERATION,
    2 => LLAMA_DART_CAP_EMBEDDINGS,
    4 => LLAMA_DART_CAP_RERANKING,
    8 => LLAMA_DART_CAP_MULTIMODAL,
    16 => LLAMA_DART_CAP_LORA,
    32 => LLAMA_DART_CAP_SPECULATIVE_DECODING,
    64 => LLAMA_DART_CAP_MTP,
    1024 => LLAMA_DART_CAP_METAL,
    2048 => LLAMA_DART_CAP_VULKAN,
    4096 => LLAMA_DART_CAP_TOOL_CALLING,
    8192 => LLAMA_DART_CAP_LOGGING,
    16384 => LLAMA_DART_CAP_PREFILL,
    _ => throw ArgumentError(
      'Unknown value for llama_dart_capability_flags: $value',
    ),
  };
}

final class llama_dart_capabilities extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int abi_version;

  @ffi.Uint64()
  external int flags;
}

final class llama_dart_model extends ffi.Opaque {}

final class llama_dart_context extends ffi.Opaque {}

final class llama_dart_generation extends ffi.Opaque {}

final class llama_dart_lora_adapter extends ffi.Opaque {}

enum llama_dart_gpu_backend {
  LLAMA_DART_GPU_BACKEND_AUTO(0),
  LLAMA_DART_GPU_BACKEND_CPU(1),
  LLAMA_DART_GPU_BACKEND_METAL(2),
  LLAMA_DART_GPU_BACKEND_VULKAN(3);

  final int value;
  const llama_dart_gpu_backend(this.value);

  static llama_dart_gpu_backend fromValue(int value) => switch (value) {
    0 => LLAMA_DART_GPU_BACKEND_AUTO,
    1 => LLAMA_DART_GPU_BACKEND_CPU,
    2 => LLAMA_DART_GPU_BACKEND_METAL,
    3 => LLAMA_DART_GPU_BACKEND_VULKAN,
    _ => throw ArgumentError(
      'Unknown value for llama_dart_gpu_backend: $value',
    ),
  };
}

enum llama_dart_log_level {
  LLAMA_DART_LOG_DISABLED(0),
  LLAMA_DART_LOG_DEBUG(1),
  LLAMA_DART_LOG_INFO(2),
  LLAMA_DART_LOG_WARNING(3),
  LLAMA_DART_LOG_ERROR(4);

  final int value;
  const llama_dart_log_level(this.value);

  static llama_dart_log_level fromValue(int value) => switch (value) {
    0 => LLAMA_DART_LOG_DISABLED,
    1 => LLAMA_DART_LOG_DEBUG,
    2 => LLAMA_DART_LOG_INFO,
    3 => LLAMA_DART_LOG_WARNING,
    4 => LLAMA_DART_LOG_ERROR,
    _ => throw ArgumentError('Unknown value for llama_dart_log_level: $value'),
  };
}

enum llama_dart_media_type {
  LLAMA_DART_MEDIA_IMAGE(1),
  LLAMA_DART_MEDIA_AUDIO(2);

  final int value;
  const llama_dart_media_type(this.value);

  static llama_dart_media_type fromValue(int value) => switch (value) {
    1 => LLAMA_DART_MEDIA_IMAGE,
    2 => LLAMA_DART_MEDIA_AUDIO,
    _ => throw ArgumentError('Unknown value for llama_dart_media_type: $value'),
  };
}

enum llama_dart_speculative_type {
  LLAMA_DART_SPECULATIVE_NONE(0),
  LLAMA_DART_SPECULATIVE_NGRAM_SIMPLE(1),
  LLAMA_DART_SPECULATIVE_DRAFT_MODEL(2),
  LLAMA_DART_SPECULATIVE_EAGLE3(3),
  LLAMA_DART_SPECULATIVE_MTP(4),
  LLAMA_DART_SPECULATIVE_NGRAM_MAP_K(5),
  LLAMA_DART_SPECULATIVE_NGRAM_MAP_K4V(6),
  LLAMA_DART_SPECULATIVE_DFLASH(7),
  LLAMA_DART_SPECULATIVE_NGRAM_MOD(8),
  LLAMA_DART_SPECULATIVE_NGRAM_CACHE(9);

  final int value;
  const llama_dart_speculative_type(this.value);

  static llama_dart_speculative_type fromValue(int value) => switch (value) {
    0 => LLAMA_DART_SPECULATIVE_NONE,
    1 => LLAMA_DART_SPECULATIVE_NGRAM_SIMPLE,
    2 => LLAMA_DART_SPECULATIVE_DRAFT_MODEL,
    3 => LLAMA_DART_SPECULATIVE_EAGLE3,
    4 => LLAMA_DART_SPECULATIVE_MTP,
    5 => LLAMA_DART_SPECULATIVE_NGRAM_MAP_K,
    6 => LLAMA_DART_SPECULATIVE_NGRAM_MAP_K4V,
    7 => LLAMA_DART_SPECULATIVE_DFLASH,
    8 => LLAMA_DART_SPECULATIVE_NGRAM_MOD,
    9 => LLAMA_DART_SPECULATIVE_NGRAM_CACHE,
    _ => throw ArgumentError(
      'Unknown value for llama_dart_speculative_type: $value',
    ),
  };
}

enum llama_dart_add_special_mode {
  LLAMA_DART_ADD_SPECIAL_NEVER(0),
  LLAMA_DART_ADD_SPECIAL_ALWAYS(1),
  LLAMA_DART_ADD_SPECIAL_IF_CONTEXT_EMPTY(2);

  final int value;
  const llama_dart_add_special_mode(this.value);

  static llama_dart_add_special_mode fromValue(int value) => switch (value) {
    0 => LLAMA_DART_ADD_SPECIAL_NEVER,
    1 => LLAMA_DART_ADD_SPECIAL_ALWAYS,
    2 => LLAMA_DART_ADD_SPECIAL_IF_CONTEXT_EMPTY,
    _ => throw ArgumentError(
      'Unknown value for llama_dart_add_special_mode: $value',
    ),
  };
}

enum llama_dart_stop_reason {
  LLAMA_DART_STOP_REASON_UNKNOWN(0),
  LLAMA_DART_STOP_REASON_END_OF_GENERATION(1),
  LLAMA_DART_STOP_REASON_STOP_SEQUENCE(2),
  LLAMA_DART_STOP_REASON_STOP_TOKEN(3),
  LLAMA_DART_STOP_REASON_MAX_TOKENS(4);

  final int value;
  const llama_dart_stop_reason(this.value);

  static llama_dart_stop_reason fromValue(int value) => switch (value) {
    0 => LLAMA_DART_STOP_REASON_UNKNOWN,
    1 => LLAMA_DART_STOP_REASON_END_OF_GENERATION,
    2 => LLAMA_DART_STOP_REASON_STOP_SEQUENCE,
    3 => LLAMA_DART_STOP_REASON_STOP_TOKEN,
    4 => LLAMA_DART_STOP_REASON_MAX_TOKENS,
    _ => throw ArgumentError(
      'Unknown value for llama_dart_stop_reason: $value',
    ),
  };
}

enum llama_dart_kv_cache_type {
  LLAMA_DART_KV_CACHE_DEFAULT(0),
  LLAMA_DART_KV_CACHE_F32(1),
  LLAMA_DART_KV_CACHE_F16(2),
  LLAMA_DART_KV_CACHE_BF16(3),
  LLAMA_DART_KV_CACHE_Q8_0(4),
  LLAMA_DART_KV_CACHE_Q4_0(5),
  LLAMA_DART_KV_CACHE_Q4_1(6),
  LLAMA_DART_KV_CACHE_IQ4_NL(7),
  LLAMA_DART_KV_CACHE_Q5_0(8),
  LLAMA_DART_KV_CACHE_Q5_1(9);

  final int value;
  const llama_dart_kv_cache_type(this.value);

  static llama_dart_kv_cache_type fromValue(int value) => switch (value) {
    0 => LLAMA_DART_KV_CACHE_DEFAULT,
    1 => LLAMA_DART_KV_CACHE_F32,
    2 => LLAMA_DART_KV_CACHE_F16,
    3 => LLAMA_DART_KV_CACHE_BF16,
    4 => LLAMA_DART_KV_CACHE_Q8_0,
    5 => LLAMA_DART_KV_CACHE_Q4_0,
    6 => LLAMA_DART_KV_CACHE_Q4_1,
    7 => LLAMA_DART_KV_CACHE_IQ4_NL,
    8 => LLAMA_DART_KV_CACHE_Q5_0,
    9 => LLAMA_DART_KV_CACHE_Q5_1,
    _ => throw ArgumentError(
      'Unknown value for llama_dart_kv_cache_type: $value',
    ),
  };
}

enum llama_dart_flash_attention_mode {
  LLAMA_DART_FLASH_ATTENTION_AUTO(0),
  LLAMA_DART_FLASH_ATTENTION_DISABLED(1),
  LLAMA_DART_FLASH_ATTENTION_ENABLED(2);

  final int value;
  const llama_dart_flash_attention_mode(this.value);

  static llama_dart_flash_attention_mode fromValue(int value) =>
      switch (value) {
        0 => LLAMA_DART_FLASH_ATTENTION_AUTO,
        1 => LLAMA_DART_FLASH_ATTENTION_DISABLED,
        2 => LLAMA_DART_FLASH_ATTENTION_ENABLED,
        _ => throw ArgumentError(
          'Unknown value for llama_dart_flash_attention_mode: $value',
        ),
      };
}

final class llama_dart_media_input extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int type;

  external ffi.Pointer<ffi.Uint8> path_data;

  @ffi.Size()
  external int path_size;

  external ffi.Pointer<ffi.Uint8> content_data;

  @ffi.Size()
  external int content_size;
}

final class llama_dart_model_load_config extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  external ffi.Pointer<ffi.Uint8> model_path_data;

  @ffi.Size()
  external int model_path_size;

  @ffi.Int32()
  external int n_gpu_layers;

  @ffi.Uint8()
  external int vocab_only;

  @ffi.Uint8()
  external int use_mmap;

  @ffi.Uint8()
  external int use_mlock;

  @ffi.Uint8()
  external int check_tensors;

  @ffi.Uint32()
  external int gpu_backend;

  external ffi.Pointer<ffi.Uint8> chat_template_data;

  @ffi.Size()
  external int chat_template_size;

  @ffi.Uint8()
  external int load_mtp;
}

final class llama_dart_model_info extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Int32()
  external int vocab_type;

  @ffi.Int32()
  external int n_vocab;

  @ffi.Int32()
  external int n_ctx_train;

  @ffi.Int32()
  external int n_embd;

  @ffi.Int32()
  external int n_embd_inp;

  @ffi.Int32()
  external int n_embd_out;

  @ffi.Int32()
  external int n_layer;

  @ffi.Int32()
  external int n_layer_nextn;

  @ffi.Int32()
  external int n_head;

  @ffi.Int32()
  external int n_head_kv;

  @ffi.Int32()
  external int ftype;

  @ffi.Uint64()
  external int size_bytes;

  @ffi.Uint64()
  external int n_params;

  @ffi.Int32()
  external int token_bos;

  @ffi.Int32()
  external int token_eos;

  @ffi.Int32()
  external int token_eot;

  @ffi.Int32()
  external int token_sep;

  @ffi.Int32()
  external int token_nl;

  @ffi.Int32()
  external int token_pad;

  @ffi.Int32()
  external int token_mask;

  @ffi.Uint8()
  external int has_encoder;

  @ffi.Uint8()
  external int has_decoder;

  @ffi.Uint8()
  external int is_recurrent;

  @ffi.Uint8()
  external int is_hybrid;

  @ffi.Uint8()
  external int is_diffusion;

  @ffi.Uint8()
  external int add_bos;

  @ffi.Uint8()
  external int add_eos;

  @ffi.Uint8()
  external int add_sep;
}

final class llama_dart_context_config extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int context_size;

  @ffi.Uint32()
  external int batch_size;

  @ffi.Uint32()
  external int ubatch_size;

  @ffi.Int32()
  external int threads;

  @ffi.Int32()
  external int batch_threads;

  @ffi.Uint8()
  external int embeddings;

  @ffi.Int32()
  external int pooling_type;

  @ffi.Int32()
  external int attention_type;

  @ffi.Uint32()
  external int speculative_ngram_n;

  @ffi.Uint32()
  external int speculative_ngram_m;

  external ffi.Pointer<ffi.Uint8> mmproj_path_data;

  @ffi.Size()
  external int mmproj_path_size;

  @ffi.Uint8()
  external int mmproj_use_gpu;

  @ffi.Uint32()
  external int speculative_type;

  external ffi.Pointer<ffi.Uint8> speculative_model_path_data;

  @ffi.Size()
  external int speculative_model_path_size;

  @ffi.Uint32()
  external int speculative_draft_max;

  @ffi.Uint32()
  external int kv_cache_key_type;

  @ffi.Uint32()
  external int kv_cache_value_type;

  @ffi.Uint32()
  external int flash_attention;

  @ffi.Uint8()
  external int kv_cache_offload;

  @ffi.Uint8()
  external int swa_full;

  @ffi.Uint8()
  external int kv_unified;

  @ffi.Uint32()
  external int speculative_ngram_min_draft;
}

final class llama_dart_context_info extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int context_size;

  @ffi.Uint32()
  external int sequence_context_size;

  @ffi.Uint32()
  external int batch_size;

  @ffi.Uint32()
  external int ubatch_size;

  @ffi.Uint32()
  external int max_sequences;

  @ffi.Uint8()
  external int supports_vision;

  @ffi.Uint8()
  external int supports_audio;

  @ffi.Uint32()
  external int gpu_backend;

  @ffi.Uint8()
  external int supports_context_shift;

  @ffi.Uint32()
  external int used_tokens;

  @ffi.Uint32()
  external int kv_cache_key_type;

  @ffi.Uint32()
  external int kv_cache_value_type;

  @ffi.Uint32()
  external int flash_attention;
